GeneralQC experimentation notebook, new generalQC ansatz definition

--- a/src/Wavefunction_Calculation.ipynb
+++ b/src/Wavefunction_Calculation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "id": "ee75f93d",
    "metadata": {},
    "outputs": [],
@@ -13,6 +13,7 @@
     "from sympy import re, im, I, E, Abs, S, conjugate\n",
     "from sympy import symbols, Function, lambdify, simplify, preorder_traversal, Float, latex, pprint\n",
     "from IPython.display import display\n",
+    "from math import pi\n",
     "\n",
     "def tensor_product(a, b):\n",
     "    if (\"__len__\" not in dir(a)):\n",
@@ -35,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "454b9dca",
    "metadata": {},
    "outputs": [],
@@ -47,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "id": "aaccaf52",
    "metadata": {},
    "outputs": [],
@@ -67,6 +68,9 @@
     "def ry(theta):\n",
     "    return np.array([[cos(theta/2), -sin(theta/2)], [sin(theta/2), cos(theta/2)]])\n",
     "\n",
+    "def p(theta):\n",
+    "    return np.array([[1, 0], [0, exp(I*theta/2)]])\n",
+    "    \n",
     "def x():\n",
     "    return np.array([[0, 1], [1, 0]])\n",
     "\n",
@@ -198,14 +202,284 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 37,
    "id": "6e3b8a6b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "t0 = symbols('\\\\theta_0', real=True)\n",
-    "t1 = symbols('\\\\theta_1', real=True)\n",
-    "t2 = symbols('\\\\theta_2', real=True)"
+    "x0 = symbols('x_0', real=True)\n",
+    "x1 = symbols('x_1', real=True)\n",
+    "x2 = symbols('x_2', real=True)\n",
+    "pi = symbols('\\\\pi', real=True)\n",
+    "# pi = 3.141592653589"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "1e7a2f17",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "psi0 = idx_to_vect(\"00\")\n",
+    "psi1 = tfv(mtp2([rx(pi/2), rx(pi/2)]), psi0)\n",
+    "psi2 = tfv(cgate2(x(), 0, 1), psi1)\n",
+    "psi3 = tfv(mtp2([id(1), p(2*(pi-x0)*(pi-x1))]), psi2)\n",
+    "psi4 = tfv(cgate2(x(), 0, 1), psi3)\n",
+    "psi5 = tfv(mtp2([rx(-pi/2), rx(-pi/2)]), psi4)\n",
+    "\n",
+    "psi = psi5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "1bf3c68e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\left(\\frac{\\left(1 - \\cos{\\left(\\pi \\right)}\\right) e^{i \\left(\\pi^{2} + x_{0} x_{1}\\right)}}{4} + \\left(\\sin^{4}{\\left(\\frac{\\pi}{4} \\right)} + \\cos^{4}{\\left(\\frac{\\pi}{4} \\right)}\\right) e^{i \\pi \\left(x_{0} + x_{1}\\right)}\\right) e^{- i \\pi \\left(x_{0} + x_{1}\\right)}$"
+      ],
+      "text/plain": [
+       "⎛                  ⎛   2        ⎞                                           ⎞ \n",
+       "⎜                ⅈ⋅⎝\\pi  + x₀⋅x₁⎠                                           ⎟ \n",
+       "⎜(1 - cos(\\pi))⋅ℯ                   ⎛   4⎛\\pi⎞      4⎛\\pi⎞⎞  ⅈ⋅\\pi⋅(x₀ + x₁)⎟ \n",
+       "⎜──────────────────────────────── + ⎜sin ⎜───⎟ + cos ⎜───⎟⎟⋅ℯ               ⎟⋅\n",
+       "⎝               4                   ⎝    ⎝ 4 ⎠       ⎝ 4 ⎠⎠                 ⎠ \n",
+       "\n",
+       "                 \n",
+       "                 \n",
+       " -ⅈ⋅\\pi⋅(x₀ + x₁)\n",
+       "ℯ                \n",
+       "                 "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# derive expression for <00|psi>\n",
+    "\n",
+    "raw00 = braket(idx_to_vect(\"00\"), psi).expand(trig=True).expand()\n",
+    "\n",
+    "braket00 = simplify(raw00, maxn=17, chop=True)\n",
+    "temp = braket00\n",
+    "for a in preorder_traversal(temp):\n",
+    "    if isinstance(a, Float):\n",
+    "        braket00 = braket00.subs(a, round(a, 15))\n",
+    "\n",
+    "display(braket00)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "cef85109",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\frac{\\left(1 - \\cos{\\left(\\pi \\right)}\\right)^{2} \\sin^{2}{\\left(\\pi^{2} - \\pi x_{0} - \\pi x_{1} + x_{0} x_{1} \\right)}}{16} + \\frac{\\left(- \\cos{\\left(\\pi \\right)} - \\cos{\\left(\\pi^{2} - \\pi x_{0} - \\pi x_{1} + x_{0} x_{1} \\right)} + \\frac{\\cos{\\left(- \\pi^{2} + \\pi x_{0} + \\pi x_{1} + \\pi - x_{0} x_{1} \\right)}}{2} + \\frac{\\cos{\\left(\\pi^{2} - \\pi x_{0} - \\pi x_{1} + \\pi + x_{0} x_{1} \\right)}}{2} - 3\\right)^{2}}{16}$"
+      ],
+      "text/plain": [
+       "                                                                              \n",
+       "                                                       ⎛                      \n",
+       "                                                       ⎜               ⎛   2  \n",
+       "              2    2⎛   2                          ⎞   ⎜-cos(\\pi) - cos⎝\\pi  -\n",
+       "(1 - cos(\\pi)) ⋅sin ⎝\\pi  - \\pi⋅x₀ - \\pi⋅x₁ + x₀⋅x₁⎠   ⎝                      \n",
+       "──────────────────────────────────────────────────── + ───────────────────────\n",
+       "                         16                                                   \n",
+       "\n",
+       "                                                                              \n",
+       "                               ⎛     2                                ⎞      ⎛\n",
+       "                        ⎞   cos⎝- \\pi  + \\pi⋅x₀ + \\pi⋅x₁ + \\pi - x₀⋅x₁⎠   cos⎝\n",
+       " \\pi⋅x₀ - \\pi⋅x₁ + x₀⋅x₁⎠ + ─────────────────────────────────────────── + ────\n",
+       "                                                 2                            \n",
+       "──────────────────────────────────────────────────────────────────────────────\n",
+       "                                                16                            \n",
+       "\n",
+       "                                          2\n",
+       "   2                                ⎞    ⎞ \n",
+       "\\pi  - \\pi⋅x₀ - \\pi⋅x₁ + \\pi + x₀⋅x₁⎠    ⎟ \n",
+       "───────────────────────────────────── - 3⎟ \n",
+       "                2                        ⎠ \n",
+       "───────────────────────────────────────────\n",
+       "                                           "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# calculate P(|00>) = |<00|psi>|\n",
+    "\n",
+    "p00 = simplify(re(braket00)*re(braket00)+im(braket00)*im(braket00))\n",
+    "\n",
+    "display(p00)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "c13411c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle i \\left(- 2 e^{i \\left(\\pi^{2} + x_{0} x_{1}\\right)} \\cos^{2}{\\left(\\frac{\\pi}{4} \\right)} + e^{i \\left(\\pi^{2} + x_{0} x_{1}\\right)} + e^{i \\pi \\left(x_{0} + x_{1}\\right)} \\cos{\\left(\\frac{\\pi}{2} \\right)}\\right) e^{- i \\pi \\left(x_{0} + x_{1}\\right)} \\sin{\\left(\\frac{\\pi}{4} \\right)} \\cos{\\left(\\frac{\\pi}{4} \\right)}$"
+      ],
+      "text/plain": [
+       "  ⎛       ⎛   2        ⎞                ⎛   2        ⎞                        \n",
+       "  ⎜     ⅈ⋅⎝\\pi  + x₀⋅x₁⎠    2⎛\\pi⎞    ⅈ⋅⎝\\pi  + x₀⋅x₁⎠    ⅈ⋅\\pi⋅(x₀ + x₁)    ⎛\n",
+       "ⅈ⋅⎜- 2⋅ℯ                ⋅cos ⎜───⎟ + ℯ                 + ℯ               ⋅cos⎜\n",
+       "  ⎝                          ⎝ 4 ⎠                                           ⎝\n",
+       "\n",
+       "    ⎞                                    \n",
+       "\\pi⎞⎟  -ⅈ⋅\\pi⋅(x₀ + x₁)    ⎛\\pi⎞    ⎛\\pi⎞\n",
+       "───⎟⎟⋅ℯ                ⋅sin⎜───⎟⋅cos⎜───⎟\n",
+       " 2 ⎠⎠                      ⎝ 4 ⎠    ⎝ 4 ⎠"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# derive expression for <01|psi>\n",
+    "\n",
+    "raw01 = braket(idx_to_vect(\"01\"), psi).expand(trig=True).expand()\n",
+    "\n",
+    "braket01 = simplify(raw01, maxn=17, chop=True)\n",
+    "temp = braket01\n",
+    "for a in preorder_traversal(temp):\n",
+    "    if isinstance(a, Float):\n",
+    "        braket01 = braket01.subs(a, round(a, 15))\n",
+    "\n",
+    "display(braket01)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "9d0499cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\left(\\frac{\\left(\\cos{\\left(\\pi \\right)} + 1\\right) \\left(\\cos{\\left(\\pi^{2} - \\pi x_{0} - \\pi x_{1} + x_{0} x_{1} \\right)} - 1\\right)^{2}}{2} + \\sin^{2}{\\left(\\pi^{2} - \\pi x_{0} - \\pi x_{1} + x_{0} x_{1} \\right)} \\cos^{2}{\\left(\\frac{\\pi}{2} \\right)}\\right) \\sin^{2}{\\left(\\frac{\\pi}{4} \\right)} \\cos^{2}{\\left(\\frac{\\pi}{4} \\right)}$"
+      ],
+      "text/plain": [
+       "⎛                                                        2                    \n",
+       "⎜               ⎛   ⎛   2                          ⎞    ⎞                     \n",
+       "⎜(cos(\\pi) + 1)⋅⎝cos⎝\\pi  - \\pi⋅x₀ - \\pi⋅x₁ + x₀⋅x₁⎠ - 1⎠       2⎛   2        \n",
+       "⎜───────────────────────────────────────────────────────── + sin ⎝\\pi  - \\pi⋅x\n",
+       "⎝                            2                                                \n",
+       "\n",
+       "                             ⎞                    \n",
+       "                             ⎟                    \n",
+       "                  ⎞    2⎛\\pi⎞⎟    2⎛\\pi⎞    2⎛\\pi⎞\n",
+       "₀ - \\pi⋅x₁ + x₀⋅x₁⎠⋅cos ⎜───⎟⎟⋅sin ⎜───⎟⋅cos ⎜───⎟\n",
+       "                        ⎝ 2 ⎠⎠     ⎝ 4 ⎠     ⎝ 4 ⎠"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# calculate P(|01>) = |<01|psi>|\n",
+    "\n",
+    "p01 = simplify(re(braket01)*re(braket01)+im(braket01)*im(braket01))\n",
+    "\n",
+    "display(p01)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "19a10a32",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\left(\\frac{\\left(\\cos{\\left(\\pi \\right)} + 1\\right) \\left(\\cos{\\left(\\pi^{2} - \\pi x_{0} - \\pi x_{1} + x_{0} x_{1} \\right)} - 1\\right)^{2}}{2} + \\sin^{2}{\\left(\\pi^{2} - \\pi x_{0} - \\pi x_{1} + x_{0} x_{1} \\right)} \\cos^{2}{\\left(\\frac{\\pi}{2} \\right)}\\right) \\sin^{2}{\\left(\\frac{\\pi}{4} \\right)} \\cos^{2}{\\left(\\frac{\\pi}{4} \\right)} + \\frac{\\left(\\cos{\\left(\\pi \\right)} - 1\\right)^{2} \\sin^{2}{\\left(\\pi^{2} - \\pi x_{0} - \\pi x_{1} + x_{0} x_{1} \\right)}}{16} + \\frac{\\left(2 \\cos{\\left(\\pi \\right)} + 2 \\cos{\\left(\\pi^{2} - \\pi x_{0} - \\pi x_{1} + x_{0} x_{1} \\right)} - \\cos{\\left(- \\pi^{2} + \\pi x_{0} + \\pi x_{1} + \\pi - x_{0} x_{1} \\right)} - \\cos{\\left(\\pi^{2} - \\pi x_{0} - \\pi x_{1} + \\pi + x_{0} x_{1} \\right)} + 6\\right)^{2}}{64}$"
+      ],
+      "text/plain": [
+       "⎛                                                        2                    \n",
+       "⎜               ⎛   ⎛   2                          ⎞    ⎞                     \n",
+       "⎜(cos(\\pi) + 1)⋅⎝cos⎝\\pi  - \\pi⋅x₀ - \\pi⋅x₁ + x₀⋅x₁⎠ - 1⎠       2⎛   2        \n",
+       "⎜───────────────────────────────────────────────────────── + sin ⎝\\pi  - \\pi⋅x\n",
+       "⎝                            2                                                \n",
+       "\n",
+       "                             ⎞                                                \n",
+       "                             ⎟                                     2    2⎛   2\n",
+       "                  ⎞    2⎛\\pi⎞⎟    2⎛\\pi⎞    2⎛\\pi⎞   (cos(\\pi) - 1) ⋅sin ⎝\\pi \n",
+       "₀ - \\pi⋅x₁ + x₀⋅x₁⎠⋅cos ⎜───⎟⎟⋅sin ⎜───⎟⋅cos ⎜───⎟ + ─────────────────────────\n",
+       "                        ⎝ 2 ⎠⎠     ⎝ 4 ⎠     ⎝ 4 ⎠                            \n",
+       "\n",
+       "                                                                              \n",
+       "                          ⎞   ⎛                  ⎛   2                        \n",
+       " - \\pi⋅x₀ - \\pi⋅x₁ + x₀⋅x₁⎠   ⎝2⋅cos(\\pi) + 2⋅cos⎝\\pi  - \\pi⋅x₀ - \\pi⋅x₁ + x₀⋅\n",
+       "─────────────────────────── + ────────────────────────────────────────────────\n",
+       "16                                                                            \n",
+       "\n",
+       "                                                                              \n",
+       "  ⎞      ⎛     2                                ⎞      ⎛   2                  \n",
+       "x₁⎠ - cos⎝- \\pi  + \\pi⋅x₀ + \\pi⋅x₁ + \\pi - x₀⋅x₁⎠ - cos⎝\\pi  - \\pi⋅x₀ - \\pi⋅x₁\n",
+       "──────────────────────────────────────────────────────────────────────────────\n",
+       "                         64                                                   \n",
+       "\n",
+       "                    2\n",
+       "              ⎞    ⎞ \n",
+       " + \\pi + x₀⋅x₁⎠ + 6⎠ \n",
+       "─────────────────────\n",
+       "                     "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "p0 = simplify(p00+p01)\n",
+    "\n",
+    "display(p0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "e359cf58",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\sin^{2}{\\left(\\pi x_{0} + \\pi x_{1} - x_{0} x_{1} - 9.86960440108437 \\right)}$"
+      ],
+      "text/plain": [
+       "   2                                            \n",
+       "sin (\\pi⋅x₀ + \\pi⋅x₁ - x₀⋅x₁ - 9.86960440108437)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "pi_val = 3.141592653589\n",
+    "expression = sin(pi_val**2-pi*x0-pi*x1+x0*x1)**2\n",
+    "res = simplify(expression)\n",
+    "\n",
+    "display(res)"
    ]
   },
   {
