push experiment result

--- a/src/GeneralQC_Experimentation.ipynb
+++ b/src/GeneralQC_Experimentation.ipynb
@@ -22,7 +22,7 @@
     "# params_saved = {'I__n_0': 1.3926202901320248, 'I__n_1': 0.008448820382520305, 'I__n_2': -0.6385783774702594, 'aw__n.r@s_0': 0.004878974097219957, 'aw__n@n.l_0': -1.710437394121971, 'bad__n.r@s_0': -2.0120646244526674, 'bad__n@n.l_0': -0.33328110433838587, 'bland__n.r@s_0': -1.8011492489090937, 'bland__n@n.l_0': -0.23301002690494765, 'cook__n.r@s@n.l_0': 2.666641605278804, 'cook__n.r@s@n.l_1': 0.35782850997078663, 'delici__n.r@s_0': -0.6784353476839611, 'delici__n@n.l_0': 2.5048532581915994, 'dislik__n.r@s@n.l_0': 1.264688638132907, 'dislik__n.r@s@n.l_1': 2.9058201511277773, 'fast__n.r@s_0': 1.5228059027468268, 'fast__n@n.l_0': 1.4318617692717328, 'food__n_0': 0.9510109180885518, 'food__n_1': 1.983545943335132, 'food__n_2': 0.31422754989262236, 'good__n.r@s_0': -0.37898061288101936, 'good__n@n.l_0': 0.3417258364922475, 'great__n.r@s_0': 0.32023762451562343, 'great__n@n.l_0': 1.9344786256084243, 'had__n.r@s@n.l_0': 0.9175005505289897, 'had__n.r@s@n.l_1': -1.126491771734188, 'hate__n.r@s@n.l_0': 1.0178843262642405, 'hate__n.r@s@n.l_1': -0.8544213946932742, 'impecc__n.r@s_0': 0.8774940821788493, 'impecc__n@n.l_0': 0.28533233081922516, 'like__n.r@s@n.l_0': 0.5238711836690633, 'like__n.r@s@n.l_1': -0.0248482491004431, 'love__n.r@s@n.l_0': -1.0716522290529822, 'love__n.r@s@n.l_1': 0.4674574117431039, 'meal__n_0': -0.2913227630628624, 'meal__n_1': -0.7824158049259571, 'meal__n_2': 2.364685233940882, 'nice__n.r@s_0': -0.31906215984000647, 'nice__n@n.l_0': -2.087345064482271, 'restaur__n_0': 1.9567881690203595, 'restaur__n_1': 0.35319298096689367, 'restaur__n_2': -0.5953604557383299, 'rude__n.r@s_0': 2.1631540155864895, 'rude__n@n.l_0': -0.9753409914505806, 'servic__n_0': -2.7047864895209357, 'servic__n_1': 1.2351321590961786, 'servic__n_2': -1.5851261977616085, 'show__n.r@s@n.l_0': -0.6393012792612347, 'show__n.r@s@n.l_1': 1.7857303585103954, 'slow__n.r@s_0': 0.5156333465906835, 'slow__n@n.l_0': 1.0425765284092643, 'staff__n_0': 0.08543447326700565, 'staff__n_1': -2.068154595353262, 'staff__n_2': 0.019379227469981927, 'tasti__n.r@s_0': 1.2246133069435021, 'tasti__n@n.l_0': 1.9668107229444722, 'terribl__n.r@s_0': -0.3440262636975905, 'terribl__n@n.l_0': 2.1861199395142688, 'unappet__n.r@s_0': 1.440589048292482, 'unappet__n@n.l_0': -0.31598863954665035, 'wa__s@s.l_0': -1.0244128683696618}\n",
     "spsa_a = 0.2\n",
     "spsa_c = 0.06\n",
-    "spsa_n_iter = 200\n",
+    "spsa_n_iter = 130\n",
     "\n",
     "# SVM type\n",
     "kernel = 'rbf'\n",
@@ -30,7 +30,7 @@
     "optimize_svm = False\n",
     "\n",
     "# Experiment metadata\n",
-    "experiment_name = \"H_CRx_default\"\n",
+    "experiment_name = \"H_CRx_default_2\"\n",
     "verbose = True"
    ]
   },
@@ -467,7 +467,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9232705e6d764c07ad8334499736d6b7",
+       "model_id": "dd36870ebe8741b2b8ca8d4c229df8e2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -481,7 +481,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2cab01cda1f848b6a0580ccc00e28f84",
+       "model_id": "d3c30f0da5d2464284fc98c88dd17c59",
        "version_major": 2,
        "version_minor": 0
       },
@@ -495,7 +495,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "73d5546962a9422a9208c32829d4fcc3",
+       "model_id": "895e8d00ee48408bb2cfa43fafd927c7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -509,7 +509,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0024e68b32cc4d1090dcd0392b46e0e1",
+       "model_id": "5480ece3c8544888b5f5491478442fda",
        "version_major": 2,
        "version_minor": 0
       },
@@ -523,7 +523,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "355c103789424366b76a02fa09408c22",
+       "model_id": "8dcb0b0ea4244e5c9788a10a5fbe32f8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -537,7 +537,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "228fef6f3c984792af51aaf57c945e91",
+       "model_id": "143bdbda911444e682e535b334914dd0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -551,7 +551,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6b54650a18f24dc6974b5e681506e82d",
+       "model_id": "27c725fd112d47f18638e3e2d6c21943",
        "version_major": 2,
        "version_minor": 0
       },
@@ -565,7 +565,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cb3a6dbf598f4f1fa0981a26b858f430",
+       "model_id": "cfb5bb3d100a44818d925ec6f1f661ca",
        "version_major": 2,
        "version_minor": 0
       },
@@ -579,7 +579,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ee1ca6f1c375416f88f401b5eea11ed0",
+       "model_id": "4a1708a6cd804a1084ad74c0b49d29bf",
        "version_major": 2,
        "version_minor": 0
       },
@@ -800,7 +800,7 @@
     "\n",
     "    return cost_fn\n",
     "\n",
-    "def run_circuit_optimization(train_circuits, train_targets, dev_circuits, dev_targets, test_circuits, test_targets, experiment_name, load_params=False):\n",
+    "def run_circuit_optimization(train_circuits, train_targets, dev_circuits, dev_targets, test_circuits, test_targets, experiment_name, train_params=True, load_params=False):\n",
     "    # collect params\n",
     "\n",
     "    all_circuits = train_circuits + dev_circuits + test_circuits\n",
@@ -949,7 +949,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "opt_results = run_circuit_optimization(train_circuits, train_targets, dev_circuits, dev_targets, test_circuits, test_targets, experiment_name, load_params)\n",
+    "opt_results = run_circuit_optimization(train_circuits, train_targets, dev_circuits, dev_targets, test_circuits, test_targets, experiment_name, train_params, load_params)\n",
     "\n",
     "train_pred_fn, train_cost_fn, train_accs, train_costs = list(opt_results[\"train\"].values())\n",
     "dev_pred_fn, dev_cost_fn, dev_accs, dev_costs = list(opt_results[\"dev\"].values())\n",
