fix generalQC layer, upload results to 130 iter

--- a/src/GeneralQC_Experimentation.ipynb
+++ b/src/GeneralQC_Experimentation.ipynb
@@ -30,7 +30,7 @@
     "optimize_svm = False\n",
     "\n",
     "# Experiment metadata\n",
-    "experiment_name = \"H_CRx_default_2\"\n",
+    "experiment_name = \"H_CRx_default_3\"\n",
     "verbose = True"
    ]
   },
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,8 +300,13 @@
     "                g1_thetas = n_qubits\n",
     "            if g2.free_symbols != {}:\n",
     "                g2_thetas = n_qubits\n",
+    "\n",
+    "            if self.reuse_params:\n",
+    "                self.k = 1\n",
+    "            else:\n",
+    "                self.k = 2\n",
     "            \n",
-    "            n_thetas = 2*(g1_thetas + g2_thetas)\n",
+    "            n_thetas = self.k*(g1_thetas + g2_thetas)\n",
     "\n",
     "            if (params_shape[1] != n_thetas):\n",
     "                raise ValueError(\n",
@@ -341,7 +346,10 @@
     "                if g1_thetas == 0:\n",
     "                    sublayer2 = Id().tensor(*([g1 for _ in range(n_qubits)]))\n",
     "                else:\n",
-    "                    sublayer2 = Id().tensor(*([g1(theta) for theta in thetas[g1_thetas+g2_thetas:2*g1_thetas+g2_thetas]]))\n",
+    "                    if self.reuse_params:\n",
+    "                        sublayer2 = Id().tensor(*([g1(theta) for theta in thetas[:g1_thetas]]))\n",
+    "                    else:\n",
+    "                        sublayer2 = Id().tensor(*([g1(theta) for theta in thetas[g1_thetas+g2_thetas:2*g1_thetas+g2_thetas]]))\n",
     "                \n",
     "                # sublayer 2 entangled block\n",
     "                ctrl = 0\n",
@@ -354,8 +362,11 @@
     "                        sublayer2 = sublayer2._apply_controlled(g2, ctrl, tgt)\n",
     "                        # sublayer2 = sublayer2.CX(ctrl, tgt)\n",
     "                    else:\n",
-    "                        sublayer2 = sublayer2._apply_controlled(g2(thetas[2*g1_thetas+g2_thetas+i]), ctrl, tgt)\n",
-    "                        # sublayer2 = sublayer2.CRx(thetas[2*g1_thetas+g2_thetas+i], ctrl, tgt)\n",
+    "                        if self.reuse_params:\n",
+    "                            sublayer2 = sublayer2._apply_controlled(g2(thetas[g1_thetas + i]), ctrl, tgt)\n",
+    "                        else:\n",
+    "                            sublayer2 = sublayer2._apply_controlled(g2(thetas[2*g1_thetas+g2_thetas+i]), ctrl, tgt)\n",
+    "                            # sublayer2 = sublayer2.CRx(thetas[2*g1_thetas+g2_thetas+i], ctrl, tgt)\n",
     "                    \n",
     "                    ctrl = tgt\n",
     "            \n",
@@ -366,23 +377,31 @@
     "            circuit.dom, circuit.cod, circuit.boxes, circuit.offsets)\n",
     "\n",
     "class GeneralQCAnsatz(CircuitAnsatz):\n",
-    "    def __init__(self, ob_map: Mapping[Ty, int], n_layers: int, n_single_qubit_params: int = 0, gate_config = {\"gate_layers\": [H, Rx], \"var_layers\": 1}, r = (1, 3), discard: bool = False) -> None:\n",
+    "    def __init__(self, ob_map: Mapping[Ty, int], n_layers: int, n_single_qubit_params: int = 0, gate_config = {\"gate_layers\": [H, Rx], \"var_layers\": 1}, r = (1, 3), reuse_params=True, discard: bool = False) -> None:\n",
     "        self.gate_config = gate_config\n",
+    "        self.reuse_params = reuse_params\n",
+    "        self.r = r\n",
     "        \n",
     "        class GeneralQCInterface(GeneralQCLayer):\n",
     "            \"\"\" Interface for GeneralQCLayer \"\"\"\n",
     "            gate_layers = self.gate_config[\"gate_layers\"]\n",
-    "            r1, r2 = r\n",
+    "            r1, r2 = self.r\n",
+    "            reuse_params = self.reuse_params\n",
     "\n",
     "        super().__init__(ob_map, n_layers, n_single_qubit_params, GeneralQCInterface, discard, [Rx, Rz])\n",
     "\n",
     "    def params_shape(self, n_qubits: int) -> Tuple[int, ...]:\n",
-    "        return (self.n_layers, 2*self.gate_config[\"var_layers\"]*n_qubits)"
+    "        if self.reuse_params:\n",
+    "            k = 1\n",
+    "        else:\n",
+    "            k = 2\n",
+    "        \n",
+    "        return (self.n_layers, k*self.gate_config[\"var_layers\"]*n_qubits)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,13 +480,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dd36870ebe8741b2b8ca8d4c229df8e2",
+       "model_id": "3e03ea654166491096db431b692eb34a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -481,7 +500,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d3c30f0da5d2464284fc98c88dd17c59",
+       "model_id": "cfa1782d8cf940fea91cc4a155a6a91f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -495,7 +514,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "895e8d00ee48408bb2cfa43fafd927c7",
+       "model_id": "6f83a6ee133a47ba86ba2267af63f3c2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -509,7 +528,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5480ece3c8544888b5f5491478442fda",
+       "model_id": "a6ec09d6c28f443481951c39d040abc2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -523,7 +542,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8dcb0b0ea4244e5c9788a10a5fbe32f8",
+       "model_id": "f4673d3e3cd5446f9c41348d6334854a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -537,7 +556,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "143bdbda911444e682e535b334914dd0",
+       "model_id": "47a4230436e24e3eb587debefb235b03",
        "version_major": 2,
        "version_minor": 0
       },
@@ -551,7 +570,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "27c725fd112d47f18638e3e2d6c21943",
+       "model_id": "3e4bd837fd9d4fdc879b4903c0a1b940",
        "version_major": 2,
        "version_minor": 0
       },
@@ -565,7 +584,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cfb5bb3d100a44818d925ec6f1f661ca",
+       "model_id": "aff27f5aa77549018bceab0ec006e028",
        "version_major": 2,
        "version_minor": 0
       },
@@ -579,7 +598,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4a1708a6cd804a1084ad74c0b49d29bf",
+       "model_id": "cb4b651dea12472699085d6e9b274541",
        "version_major": 2,
        "version_minor": 0
       },
@@ -599,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -610,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -619,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -635,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -662,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -747,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -945,9 +964,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unexpected exception formatting exception. Falling back to standard exception\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\n",
+      "  File \"c:\\Users\\Lenovo\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\IPython\\core\\interactiveshell.py\", line 3508, in run_code\n",
+      "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "  File \"C:\\Users\\Lenovo\\AppData\\Local\\Temp\\ipykernel_22112\\3399695302.py\", line 1, in <module>\n",
+      "    opt_results = run_circuit_optimization(train_circuits, train_targets, dev_circuits, dev_targets, test_circuits, test_targets, experiment_name, train_params, load_params)\n",
+      "                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\Lenovo\\AppData\\Local\\Temp\\ipykernel_22112\\4126877039.py\", line 86, in run_circuit_optimization\n",
+      "    result = myMinimizeSPSA(train_cost_fn, x0=x0, a=spsa_a, c=spsa_c, niter=spsa_n_iter, callback=dev_cost_fn)\n",
+      "             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\Lenovo\\AppData\\Local\\Temp\\ipykernel_22112\\2420794196.py\", line -1, in myMinimizeSPSA\n",
+      "KeyboardInterrupt\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"c:\\Users\\Lenovo\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\IPython\\core\\interactiveshell.py\", line 2105, in showtraceback\n",
+      "    stb = self.InteractiveTB.structured_traceback(\n",
+      "          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\Lenovo\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\IPython\\core\\ultratb.py\", line 1428, in structured_traceback\n",
+      "    return FormattedTB.structured_traceback(\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\Lenovo\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\IPython\\core\\ultratb.py\", line 1319, in structured_traceback\n",
+      "    return VerboseTB.structured_traceback(\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\Lenovo\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\IPython\\core\\ultratb.py\", line 1172, in structured_traceback\n",
+      "    formatted_exception = self.format_exception_as_a_whole(etype, evalue, etb, number_of_lines_of_context,\n",
+      "                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\Lenovo\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\IPython\\core\\ultratb.py\", line 1087, in format_exception_as_a_whole\n",
+      "    frames.append(self.format_record(record))\n",
+      "                  ^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\Lenovo\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\IPython\\core\\ultratb.py\", line 969, in format_record\n",
+      "    frame_info.lines, Colors, self.has_colors, lvals\n",
+      "    ^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\Lenovo\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\IPython\\core\\ultratb.py\", line 792, in lines\n",
+      "    return self._sd.lines\n",
+      "           ^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\Lenovo\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\stack_data\\utils.py\", line 144, in cached_property_wrapper\n",
+      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
+      "                                               ^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\Lenovo\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\stack_data\\core.py\", line 734, in lines\n",
+      "    pieces = self.included_pieces\n",
+      "             ^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\Lenovo\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\stack_data\\utils.py\", line 144, in cached_property_wrapper\n",
+      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
+      "                                               ^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\Lenovo\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\stack_data\\core.py\", line 681, in included_pieces\n",
+      "    pos = scope_pieces.index(self.executing_piece)\n",
+      "                             ^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\Lenovo\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\stack_data\\utils.py\", line 144, in cached_property_wrapper\n",
+      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
+      "                                               ^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\Lenovo\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\stack_data\\core.py\", line 660, in executing_piece\n",
+      "    return only(\n",
+      "           ^^^^^\n",
+      "  File \"c:\\Users\\Lenovo\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\executing\\executing.py\", line 190, in only\n",
+      "    raise NotOneValueFound('Expected one value, found 0')\n",
+      "executing.executing.NotOneValueFound: Expected one value, found 0\n"
+     ]
+    }
+   ],
    "source": [
     "opt_results = run_circuit_optimization(train_circuits, train_targets, dev_circuits, dev_targets, test_circuits, test_targets, experiment_name, train_params, load_params)\n",
     "\n",
