--- a/src/Journal April 2024.ipynb
+++ b/src/Journal April 2024.ipynb
@@ -2,10 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "metadata": {}
+   },
    "outputs": [],
    "source": [
+    "from lambeq.core.globals import VerbosityLevel\n",
+    "\n",
     "# Experiment Parameters\n",
     "\n",
     "# Experiment conditions\n",
@@ -25,7 +29,7 @@
     "\n",
     "# Experiment metadata\n",
     "experiment_name = \"code_test\"\n",
-    "verbose = False\n",
+    "verbose = VerbosityLevel.SUPPRESS.value\n",
     "\n",
     "# Experiment parameters format:\n",
     "#    dataset | gate_layers | var_layers | spsa_a | spsa_c | spsa_n_iter | is_nouns_parameterized\n",
@@ -62,9 +66,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {
+    "metadata": {}
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "experiment folder already exists\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import json\n",
@@ -82,8 +96,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "metadata": {}
+   },
    "outputs": [],
    "source": [
     "from nltk.tokenize import word_tokenize\n",
@@ -94,9 +110,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {
+    "metadata": {}
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package punkt to /home/quantum/nltk_data...\n",
+      "[nltk_data]   Package punkt is already up-to-date!\n",
+      "[nltk_data] Downloading package wordnet to /home/quantum/nltk_data...\n",
+      "[nltk_data]   Package wordnet is already up-to-date!\n",
+      "[nltk_data] Downloading package omw-1.4 to /home/quantum/nltk_data...\n",
+      "[nltk_data]   Package omw-1.4 is already up-to-date!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "nltk.download('punkt')\n",
     "nltk.download('wordnet')\n",
@@ -105,8 +146,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "metadata": {}
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -122,8 +165,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "metadata": {}
+   },
    "outputs": [],
    "source": [
     "# Helper function for converting to bigraph\n",
@@ -171,8 +216,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "metadata": {}
+   },
    "outputs": [],
    "source": [
     "# Fucntion for stemming and lemmatization of tokens\n",
@@ -201,8 +248,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 10,
+   "metadata": {
+    "metadata": {}
+   },
    "outputs": [],
    "source": [
     "# Function for stemming and lemmatization of diagram boxes\n",
@@ -223,8 +272,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 11,
+   "metadata": {
+    "metadata": {}
+   },
    "outputs": [],
    "source": [
     "from lambeq.ansatz import CircuitAnsatz\n",
@@ -403,8 +454,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 12,
+   "metadata": {
+    "metadata": {}
+   },
    "outputs": [],
    "source": [
     "from lambeq import BobcatParser, Rewriter, remove_cups\n",
@@ -465,8 +518,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 13,
+   "metadata": {
+    "metadata": {}
+   },
    "outputs": [],
    "source": [
     "from pytket.extensions.qiskit import AerBackend"
@@ -474,8 +529,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 14,
+   "metadata": {
+    "metadata": {}
+   },
    "outputs": [],
    "source": [
     "# configure backend\n",
@@ -490,8 +547,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 15,
+   "metadata": {
+    "metadata": {}
+   },
    "outputs": [],
    "source": [
     "from discopy.quantum import Circuit, Id, Measure\n",
@@ -517,8 +576,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 16,
+   "metadata": {
+    "metadata": {}
+   },
    "outputs": [],
    "source": [
     "from noisyopt import OptimizeResult\n",
@@ -602,8 +663,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 17,
+   "metadata": {
+    "metadata": {}
+   },
    "outputs": [],
    "source": [
     "from noisyopt import minimizeSPSA\n",
@@ -802,8 +865,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 18,
+   "metadata": {
+    "metadata": {}
+   },
    "outputs": [],
    "source": [
     "from lambeq import AtomicType, IQPAnsatz\n",
@@ -898,7 +963,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.11.7"
   },
   "orig_nbformat": 4
  },
